adaptando para segunda entrega

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Buscaminas en Consola</h1>
 
         <div id="tablero">
-            <table id="tabla" onclick="tableroHTML(juego.tableroVisible)"></table>
+            <table id="tabla"></table>
             <a href=""></a>
         </div>
 
