--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="botones">
             <button onclick="iniciarJuego()">Ejecutar</button>
-            <button onclick="siguienteTurno()">Siguiente Turno</button>
+<!--            <button onclick="siguienteTurno()">Siguiente Turno</button>-->
             <button onclick="botonGuardar()">Guardar</button>
             <button onclick="botonCargar()">Cargar</button>
         </div>
