--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Buscaminas en Consola</title>
+    <title>Buscaminas con JavaScript</title>
     <script src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
