fin ya sí que sí??

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body>
 <div id="ejercicio">
     <div>
-        <h1>Buscaminas en Consola</h1>
+        <h1>Buscaminas con JavaScript</h1>
 
         <div id="tablero">
-            <table id="tabla"></table>
-            <a href=""></a>
+            <table id="tabla">
+<!--                dinámico-->
+            </table>
         </div>
-
+    <div id="stats">
+        <div id="cronometro"></div>
+        <div id="banderas"></div>
+    </div>
         <div class="botones">
             <button onclick="iniciarJuego()">Ejecutar</button>
 <!--            <button onclick="siguienteTurno()">Siguiente Turno</button>-->
