--- a/index.html
+++ b/index.html
@@ -7,27 +7,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="ejercicio">
-    <div>
+    <div id="ejercicio">
         <h1>Buscaminas con JavaScript</h1>
-
-        <div id="tablero">
-            <table id="tabla">
-<!--                dinámico-->
-            </table>
+        <div>
+            <div id="tablero">
+                <table id="tabla"></table>
+            </div>
+            <div id="stats">
+                <div id="cronometro"></div>
+                <div id="banderas"></div>
+            </div>
         </div>
-    <div id="stats">
-        <div id="cronometro"></div>
-        <div id="banderas"></div>
-    </div>
         <div class="botones">
             <button onclick="iniciarJuego()">Ejecutar</button>
-<!--            <button onclick="siguienteTurno()">Siguiente Turno</button>-->
             <button onclick="botonGuardar()">Guardar</button>
             <button onclick="botonCargar()">Cargar</button>
         </div>
     </div>
-</div>
 <footer>
     <p>Desarrollado por David Duque Díaz para Desarrollo web en entorno cliente - 2025</p>
 </footer>
